tdf#122646 EMF+ Implement proper line width display

With this patch I have implemented proper line width display,
and improved performance (we are not multiply by matrix of doubles,
but only by one double.

Change-Id: Ica85b93ac7b7f37a9debb7bc232f2d9140c2a772
Reviewed-on: https://gerrit.libreoffice.org/66136
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>